--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "webpack-dev-server": "^4.9.0"
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 60
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "jest-environment-jsdom": "^28.1.1",
     "msw": "^0.42.1",
+    "prop-types": "^15.8.1",
     "puppeteer": "^14.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
